      file is referred to without a hyphen; instead, issue a separate tag
      that explains the problem.  Based on a patch from Raphael Geissert.
      (Closes: #517191)
    + [RA] Allow commas between the GFDL license name and version when
      suppressing false positives for the 1.1 version.  Thanks, Aurelien
      Jarno.  (Closes: #516687)
  * checks/cruft:
    + [RA] Be robust against whitespace in the Architecture field.
  * checks/debconf:
    + [ADB] Use Lintian::Relation rather than Dep.
  * checks/debhelper:
    + [ADB] Use Lintian::Relation rather than Dep.
  * checks/description{,.desc}:
    + [RA] Remove description-synopsis-has-leading-spaces.  Policy
      explicitly says this is not a bug.  Adjust for the changes to Util
      that preserve leading whitespace in continued fields.
  * checks/fields:
    + [RA] Precompile constant regexes with qr.  Patch from Raphael
      Geissert.
    + [RA] Load Lintian::Data objects only once.  Patch from Raphael
      Geissert.  Also use all caps for global variables.
    + [RA] Strip leading and trailing whitespace from fields and simplify
      other logic to assume that.  Thanks, Gonéri Le Bouder.
    * [RA] Move data from common_data.pm to here and use Lintian::Data to
      get the list of known architectures.  Patch from Raphael Geissert.
  * checks/files:
    + [RA] Avoid capturing parentheses in regexes due to their minor
      performance penalty.  Patch from Raphael Geissert.
    + [RA] Precompile constant regexes with qr and only load the list of
      font packages if needed.  Patch from Raphael Geissert.
    + [RA] Warn about yui-*.js as well as yahoo-*.js.  Patch from Raphael
      Geissert.
    + [ADB] Use Lintian::Relation instead of Dep.
    + [RA] magpierss was renamed to libphp-magpierss.  Patch from Marcelo
      Jorge Vieira (metal).  (Closes: #518684)
  * checks/huge-usr-share:
    + [RA] Simplify architecture checking code and be robust against
      whitespace in the field.