@@ -1,0 +1,2 @@
+This package is copyright (c) 2009, Some Name <example@example.org> and is
+licensed under the GPL, see `/usr/share/common-licenses/GPL'.
